Changing the vercel.json for the functional error

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
   ],
   "functions": {
     "api/index.py": {
-      "runtime": "python@3.9"
+      "runtime": "python3.9"
     }
   },
   "headers": [
@@ -32,4 +32,4 @@
       ]
     }
   ]
-} 
+}
