--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
   ],
   "functions": {
     "api/index.py": {
-      "runtime": "python3.9"
+       "runtime": "vercel-python@0.7.1"
     }
   },
   "headers": [
